# FYS4411-Project2

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_project  main.cpp  optimizer.cpp  optimizer.h  particle.cpp  particle.h  rbmparams.cpp  rbmparams.hpp  sampler.cpp  sampler.h  samplerFineTune.cpp  samplerFineTune.h  system.cpp  system.h  times.txt  utils.cpp  utils.h
DataAnalysis/: blocking.py  distance_hist.py  onebodydensity.py  onebodydensitymoreseeds.py  path.py  plots.py  process_gd_data.py
Hamiltonians/: InteractingHarmonicOscillator.cpp  InteractingHarmonicOscillator.hpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h  harmonicoscillator3d.cpp  harmonicoscillator3d.h  interactingharmonicoscillator.cpp  interactingharmonicoscillator.hpp
InitialStates/: initialstate.cpp  initialstate.h
Input/: Template.txt  rbm_input.txt  simulation_input.txt
Math/: random.h
Outputs/: Metropolis_Analytical.txt  Metropolis_Analytical_times.txt  output.txt  outputsTestRun.txt  times_run3march.txt
Solvers/: metropolis.cpp  metropolis.h  metropolisHastings.cpp  metropolisHastings.h  montecarlo.cpp  montecarlo.h
WaveFunctions/: interactinggaussian.cpp  interactinggaussian.h  interactinggaussian3d.cpp  interactinggaussian3d.h  restrictedboltzmannmachine.cpp  restrictedboltzmannmachine.h  simplegaussian.cpp  simplegaussian.h  simplegaussian3d.cpp  simplegaussian3d.h  wavefunction.h
